--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <title>p5.js PWA starter</title>
   <meta name="description" content="p5.js PWA starter template" />
 
-  <link rel="icon" href="/images/icons/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="images/icons/favicon.ico" type="image/x-icon" />
   
-  <link rel="manifest" href="/manifest.json" />
+  <link rel="manifest" href="manifest.json" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <meta name="apple-mobile-web-app-title" content="p5.js PWA starter" />
-  <link rel="apple-touch-icon" href="/images/icons/152.png" />
+  <link rel="apple-touch-icon" href="images/icons/152.png" />
   <meta name="theme-color" content="#FF8FB9" />
 
 
-  <link rel="stylesheet" type="text/css" href="/styles/style.css">
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 
-  <script src="/lib/p5.min.js"></script>
+  <script src="lib/p5.min.js"></script>
 
 </head>
 
@@ -29,7 +29,7 @@
 
   <script>
     if ("serviceWorker" in navigator) {
-      window.addEventListener("load", () => navigator.serviceWorker.register("/service-worker.js") );
+      window.addEventListener("load", () => navigator.serviceWorker.register("service-worker.js") );
     }
   </script>
 
